--- a/app.css
+++ b/app.css
@@ -39,13 +39,22 @@ img {
 .section-title {
   background: rgb(255, 255, 255);
   background: linear-gradient(283deg, rgb(255, 255, 255) 34%, rgb(207, 232, 176) 77%);
+  border-radius: 4px;
   padding: 22px 24px;
-  color: #303030;
-  font-size: 20px;
-  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.section-title h1 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 32px;
+  /* identical to box height, or 160% */
+  /* Neutral/01 */
+  color: #303030;
+  color: #303030;
+  font-size: 20px;
+  line-height: 32px;
 }
 .section-title a {
   color: #8bc63f;
@@ -244,7 +253,7 @@ img {
 }
 
 .categories {
-  padding: 24px 0;
+  padding: 30px 0;
   border-bottom: 1px solid #f3f4f4;
 }
 .categories ul {
@@ -253,6 +262,7 @@ img {
   gap: 68px;
 }
 .categories ul li {
+  font-weight: 500;
   font-size: 22px;
   line-height: 24px;
 }
@@ -309,7 +319,11 @@ img {
   display: flex;
   align-items: center;
   gap: 15px;
-  font-size: 18px;
+}
+.top-product-title p {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 32px;
 }
 .top-product-list {
   display: flex;
@@ -332,6 +346,7 @@ img {
 }
 .footer .container {
   display: flex;
+  justify-content: space-between;
 }
 .footer .right {
   width: 66.66667%;
@@ -348,6 +363,7 @@ img {
   margin-left: 10px;
   color: #727272;
   font-size: 14px;
+  max-width: 365px;
 }
 .footer .logo-list {
   display: flex;
@@ -394,6 +410,7 @@ img {
   background-color: #fff;
   align-items: center;
   justify-content: space-between;
+  font-size: 18px;
 }
 .footer .returns img {
   margin-top: 12px;
@@ -408,6 +425,23 @@ img {
 }
 .content .list .item {
   width: calc(20% - 33px);
+  position: relative;
+}
+.content .list .item .sale {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  position: absolute;
+  width: 54px;
+  height: 36px;
+  left: 8px;
+  top: 12px;
+  /* Semantic/ Danger */
+  background: #ff615c;
+  border-radius: 4px;
 }
 .content .list .item img {
   width: 100%;
@@ -425,6 +459,7 @@ img {
   align-items: center;
 }
 .content .list .item .price {
+  color: #395319;
   font-size: 20px;
   line-height: 28px;
   font-weight: 600;
@@ -463,6 +498,16 @@ img {
 .slider .item {
   width: 15%;
   flex: none;
+}
+.slider .item .name {
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  /* or 140% */
+  text-align: center;
+  /* Primary/01 */
+  color: #395319;
 }
 .slider .item img {
   max-width: 100%;
@@ -565,6 +610,9 @@ img {
   .categories ul {
     gap: 8px;
   }
+  .slider .item .name {
+    font-size: 10px;
+  }
 }
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023.98px) {
@@ -614,6 +662,9 @@ img {
   .categories ul li {
     font-size: 13px;
   }
+  .slider .item .name {
+    font-size: 14px;
+  }
   .footer .container {
     display: flex;
     flex-direction: column;
@@ -638,16 +689,26 @@ img {
   .banner-heading {
     font-size: 45px;
   }
+  .footer .returns p {
+    font-size: 16px;
+  }
+  .footer .left .footer-text {
+    max-width: 200px;
+  }
+  .section-title h1 {
+    font-size: 16px;
+  }
   .categories ul {
-    gap: 50px;
+    gap: 40px;
   }
   .categories ul li {
-    font-size: 16px;
+    font-size: 17px;
   }
   .content .list {
     gap: 15px;
   }
   .content .list .item {
+    position: relative;
     width: calc(25% - 15px);
   }
   .content .list .item .name {
