--- a/app.scss
+++ b/app.scss
@@ -39,10 +39,21 @@ img {
     rgba(255, 255, 255, 1) 34%,
     rgba(207, 232, 176, 1) 77%
   );
+  border-radius: 4px;
   padding: 22px 24px;
-  color: #303030;
-  font-size: 20px;
-  font-weight: 600;
+  h1 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 32px;
+    /* identical to box height, or 160% */
+
+    /* Neutral/01 */
+
+    color: #303030;
+    color: #303030;
+    font-size: 20px;
+    line-height: 32px;
+  }
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -248,7 +259,7 @@ img {
 }
 
 .categories {
-  padding: 24px 0;
+  padding: 30px 0;
   border-bottom: 1px solid #f3f4f4;
 
   ul {
@@ -256,6 +267,7 @@ img {
     align-items: center;
     gap: 68px;
     li {
+      font-weight: 500;
       font-size: 22px;
       line-height: 24px;
     }
@@ -322,7 +334,11 @@ img {
     display: flex;
     align-items: center;
     gap: 15px;
-    font-size: 18px;
+    p {
+      font-weight: 600;
+      font-size: 25px;
+      line-height: 32px;
+    }
   }
 
   &-list {
@@ -346,6 +362,7 @@ img {
   background-color: #f3f4f4;
   .container {
     display: flex;
+    justify-content: space-between;
   }
   .right {
     width: calc(100% - 33.33333%);
@@ -362,6 +379,7 @@ img {
       margin-left: 10px;
       color: #727272;
       font-size: 14px;
+      max-width: 365px;
     }
     img {
     }
@@ -415,6 +433,7 @@ img {
       background-color: #fff;
       align-items: center;
       justify-content: space-between;
+      font-size: 18px;
     }
     img {
       margin-top: 12px;
@@ -431,6 +450,26 @@ img {
     margin-top: 34px;
     .item {
       width: calc(20% - 33px);
+      position: relative;
+      .sale {
+          
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        font-size: 14px;
+        font-weight: 500;
+        position: absolute;
+        width: 54px;
+        height: 36px;
+        left: 8px;
+        top: 12px;
+
+        /* Semantic/ Danger */
+
+        background: #ff615c;
+        border-radius: 4px;
+      }
       img {
         width: 100%;
         max-width: 100%;
@@ -447,6 +486,7 @@ img {
         align-items: center;
       }
       .price {
+        color: #395319;
         font-size: 20px;
         line-height: 28px;
         font-weight: 600;
@@ -485,6 +525,19 @@ img {
   .item {
     width: 15%;
     flex: none;
+    .name {
+      text-align: center;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 28px;
+      /* or 140% */
+
+      text-align: center;
+
+      /* Primary/01 */
+
+      color: #395319;
+    }
     img {
       max-width: 100%;
     }
@@ -614,6 +667,13 @@ img {
       gap: 8px;
     }
   }
+  .slider {
+    .item {
+      .name {
+        font-size: 10px;
+      }
+    }
+  }
 }
 
 /* tablet */
@@ -673,6 +733,13 @@ img {
       }
     }
   }
+  .slider {
+    .item {
+      .name {
+        font-size: 14px;
+      }
+    }
+  }
   .footer {
     .container {
       display: flex;
@@ -705,14 +772,30 @@ img {
       font-size: 45px;
     }
   }
-  .categories{
 
+  .footer {
+    .returns {
+      p {
+        font-size: 16px;
+      }
+    }
+    .left {
+      .footer-text {
+        max-width: 200px;
+      }
+    }
   }
+  .section-title {
+    h1 {
+      font-size: 16px;
+    }
+  }
+
   .categories {
     ul {
-      gap: 50px;
-      li{
-        font-size: 16px;
+      gap: 40px;
+      li {
+        font-size: 17px;
       }
     }
   }
@@ -722,7 +805,13 @@ img {
       gap: 15px;
 
       .item {
+        position: relative;
+        
+       
         width: calc(25% - 15px);
+        .sale{
+
+        }
         .name {
           font-size: 18px;
         }
