--- a/app.css
+++ b/app.css
@@ -313,7 +313,10 @@ img {
 }
 .top-product .top-product-head .more {
   font-size: 18px;
-  color: #000;
+  color: #395319;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
 }
 .top-product-title {
   display: flex;
@@ -453,7 +456,7 @@ img {
   line-height: 28px;
 }
 .content .list .item .prices {
-  justify-content: space-between;
+  gap: 8px;
   margin-top: 8px;
   display: flex;
   align-items: center;
@@ -696,7 +699,7 @@ img {
     max-width: 200px;
   }
   .section-title h1 {
-    font-size: 16px;
+    font-size: 20px;
   }
   .categories ul {
     gap: 40px;
