--- a/app.scss
+++ b/app.scss
@@ -154,23 +154,20 @@ img {
     right: 0;
     top: 0;
     bottom: 0;
-    width: 5%;
-    left: 70%;
-    width: 100%;
+    left: 63.4%;
     &-img {
-      width: 100%;
-      height: 100%;
       object-fit: cover;
+      height: 100%;
     }
 
     &-rec {
+      height: 100%;
       max-width: 100%;
       max-height: 100%;
       left: 0;
       bottom: 0;
       top: 0;
       position: absolute;
-      object-fit: cover;
     }
   }
 }
@@ -182,14 +179,16 @@ img {
   .container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    
   }
 
   .search-bar {
     display: flex;
+    margin-left: 72px;
+    margin-right: 90px;
     align-items: center;
     gap: 15px;
-    width: 50%;
+    flex: 1;
     height: 100%;
     input {
       padding-left: 16px;
@@ -274,10 +273,14 @@ img {
     .dropdown {
       display: flex;
       align-items: center;
-      gap: 6px;
+      gap: 8px;
       position: relative;
       cursor: pointer;
       z-index: 99;
+      i{
+        font-size: 8px;
+        color: #959EAD;
+      }
       .sub-dropdown {
         position: absolute;
         top: 40px;
@@ -378,14 +381,14 @@ img {
     gap: 20px;
     max-width: 33.3333%;
 
-    .footer-text {
-      margin-left: 10px;
-      color: #727272;
-      font-size: 14px;
-      max-width: 365px;
-    }
     img {
     }
+  }
+  .footer-text {
+    margin-left: 10px;
+    color: #727272;
+    font-size: 14px;
+    max-width: 365px;
   }
 
   .logo-list {
@@ -435,8 +438,11 @@ img {
       border-radius: 8px;
       background-color: #fff;
       align-items: center;
-      justify-content: space-between;
       font-size: 18px;
+      gap: 4px;
+    }
+    &-link{
+      justify-content: space-between;
     }
     img {
       margin-top: 12px;
@@ -574,9 +580,9 @@ img {
     }
   }
   .banner {
-    height: 122px;
+    height: 100px;
     &-heading {
-      font-size: 20px;
+      font-size: 16px;
       margin-left: 30px;
     }
     /* .bamboo-right {
@@ -721,7 +727,7 @@ img {
   .banner {
     &-heading {
       margin-left: 84px;
-      font-size: 35px;
+      font-size: 33px;
     }
     /* .bamboo-right{
         left: 580px;
@@ -780,11 +786,17 @@ img {
       p {
         font-size: 16px;
       }
-    }
-    .left {
-      .footer-text {
-        max-width: 200px;
+      &-visit, &-link{
+        .text{
+          font-size: 14px;
+        }
       }
+    }
+    
+    .left {
+    }
+    .footer-text {
+      max-width: 200px;
     }
   }
   .section-title {
