--- a/app.scss
+++ b/app.scss
@@ -285,6 +285,7 @@ a:hover{
       align-items: center;
       gap: 8px;
       position: relative;
+      
       cursor: pointer;
       z-index: 99;
       i {
@@ -299,7 +300,10 @@ a:hover{
         left: 0;
         width: 140px;
         display: flex;
+        visibility: hidden;
         opacity: 0;
+        border-radius: 8px;
+        z-index: -99;
         flex-direction: column;
         z-index: 0;
         font-weight: 400;
@@ -314,8 +318,7 @@ a:hover{
           color: #555;
           padding: 5px 0px;
           width: 100%;
-          text-align: center;
-          border-bottom: 1px solid #ccc;
+          padding-left: 50px;
         }
       }
     }
@@ -324,11 +327,15 @@ a:hover{
       .sub-dropdown {
         z-index: 99;
         opacity: 1;
+        visibility: unset;
       }
     }
     li {
     }
   }
+}
+.inactive{
+  color: #CFE8B0;
 }
 
 .top-product {
