--- a/app.css
+++ b/app.css
@@ -230,7 +230,7 @@ a:hover {
   border-radius: 8px;
   color: #fff;
   width: 99px;
-  height: 40px;
+  height: 20px;
   /* Primary/02 */
   display: flex;
   justify-content: center;
@@ -372,14 +372,12 @@ a:hover {
 .top-product-list img {
   object-fit: cover;
   max-width: 100%;
+  height: 110px;
+  object-fit: contain;
 }
 .top-product-list p {
   font-size: 14px;
   text-align: center;
-}
-.top-product img {
-  height: 110px;
-  object-fit: contain;
 }
 
 .footer {
@@ -682,6 +680,14 @@ a:hover {
   }
   .header .btns-wrap {
     gap: 18px;
+  }
+  .pre-header .container {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .header .search-bar {
+    margin-left: 20px;
+    margin-right: 30px;
   }
   .content .list {
     gap: 5px;
