--- a/app.scss
+++ b/app.scss
@@ -233,7 +233,7 @@ a:hover{
       border-radius: 8px;
       color: #fff;
       width: 99px;
-      height: 40px;
+      height: 20px;
 
       /* Primary/02 */
       display: flex;
@@ -387,6 +387,8 @@ a:hover{
     img {
       object-fit: cover;
       max-width: 100%;
+        height: 110px;
+        object-fit: contain;
      
     }
     p {
@@ -394,10 +396,7 @@ a:hover{
       text-align: center;
     }
   }
-  img{
-    height: 110px;
-    object-fit: contain;
-  }
+  
 }
 
 .footer {
@@ -750,6 +749,18 @@ a:hover{
   .header {
     .btns-wrap {
       gap: 18px;
+    }
+  }
+  .pre-header{
+    .container{
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+  .header{
+    .search-bar{
+      margin-left: 20px;
+      margin-right: 30px;
     }
   }
   .content {
