--- a/app.css
+++ b/app.css
@@ -41,6 +41,7 @@ img {
   background: linear-gradient(283deg, rgb(255, 255, 255) 34%, rgb(207, 232, 176) 77%);
   border-radius: 4px;
   padding: 22px 24px;
+  margin-top: 37px;
   display: flex;
   align-items: center;
   justify-content: space-between;
