--- a/app.scss
+++ b/app.scss
@@ -41,6 +41,7 @@ img {
   );
   border-radius: 4px;
   padding: 22px 24px;
+  margin-top: 37px;
   h1 {
     font-weight: 600;
     font-size: 20px;
