--- a/app.scss
+++ b/app.scss
@@ -411,6 +411,7 @@ a:hover{
     width: calc(100% - 33.33333%);
     display: flex;
     justify-content: space-between;
+    gap: 6px;
   }
   .left {
     display: flex;
@@ -701,11 +702,16 @@ a:hover{
       }
     }
     .top-product-list {
+      flex-wrap: nowrap;
+      overflow: scroll;
       gap: 3px;
       p {
         font-size: 9px;
       }
-     
+     .top-product-item{
+      flex: none;
+      width: 30%;
+     }
     }
   }
   
