--- a/app.scss
+++ b/app.scss
@@ -592,11 +592,101 @@ a:hover{
   display: none;
 }
 
+.mobile-categories{
+  display: none;
+}
+
 //pc
 
 /* mobile */
 
 @media screen and (max-width: 767.98px) {
+  .mobile-categories{
+    display: block;
+    position: relative;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s ease-in-out;
+    &.active{
+      visibility: visible;
+      opacity: 1;
+    }
+    ul {
+      z-index: 9;
+      top: 40px;
+      position: absolute;
+      visibility: unset;
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+      border-radius: 8px;
+      border: 1px solid #727272;
+      width: fit-content;
+      li {
+        font-weight: 500;
+        font-size: 12px;
+        padding: 16px 8px;
+        line-height: 24px;
+      }
+      .dropdown {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        position: relative;
+        
+        cursor: pointer;
+        z-index: 99;
+        i {
+          font-size: 8px;
+          color: #959ead;
+        }
+        .sub-dropdown {
+          position: absolute;
+          top: 15px;
+          transition: 0.2s ease;
+          height: fit-content;
+          left: 145px;
+          width: 100px;
+          display: flex;
+          visibility: hidden;
+          opacity: 0;
+          border-radius: 8px;
+          z-index: -99;
+          flex-direction: column;
+          z-index: 0;
+          font-weight: 400;
+          background-color: #fff;
+          border: 1px solid #ccc;
+          gap: 10px;
+  
+          li {
+            font-weight: 400;
+            font-size: 10px;
+            color: #555;
+            padding: 5px 0px;
+            width: 100%;
+            padding-left: 20px;
+          }
+        }
+      }
+  
+      .dropdown:hover {
+        .sub-dropdown {
+          z-index: 999;
+          opacity: 1;
+          visibility: unset;
+        }
+      }
+      li {
+      }
+    }
+  }
+  .categories{
+    display: none;
+  }
+  .section-title{
+    padding: 12px 16px;
+  }
   .header{
     .btns-wrap{
       .sign-up-btn{
@@ -639,7 +729,13 @@ a:hover{
       left: 300px;
     } */
   }
-
+  .categories{
+    ul{
+      li{
+        font-size: 15px;
+      }
+    }
+  }
   .header {
     .container {
       flex-direction: column;
@@ -705,6 +801,9 @@ a:hover{
       flex-wrap: nowrap;
       overflow: scroll;
       gap: 3px;
+      &::-webkit-scrollbar{
+        display: none;
+      }
       p {
         font-size: 9px;
       }
@@ -766,6 +865,7 @@ a:hover{
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023.98px) {
   .section-title {
+    padding: 16px 20px;
     h1 {
       font-size: 18px;
     }
@@ -785,10 +885,25 @@ a:hover{
     }
   }
   .header{
-    .search-bar{
-      margin-left: 20px;
-      margin-right: 30px;
+    .logo{
+      width: 50px;
     }
+    .search-bar{
+      gap: 8px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+    .btns-wrap{
+      .sign-in-btn, .sign-up-btn{
+        font-size: 16px;
+      }
+      .sign-up-btn{
+        width: 77px;
+      }
+    }
+  }
+  .categories{
+   
   }
   .content {
     .list {
