--- a/app.css
+++ b/app.css
@@ -561,8 +561,91 @@ a:hover {
   display: none;
 }
 
+.mobile-categories {
+  display: none;
+}
+
 /* mobile */
 @media screen and (max-width: 767.98px) {
+  .mobile-categories {
+    display: block;
+    position: relative;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s ease-in-out;
+  }
+  .mobile-categories.active {
+    visibility: visible;
+    opacity: 1;
+  }
+  .mobile-categories ul {
+    z-index: 9;
+    top: 40px;
+    position: absolute;
+    visibility: unset;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 8px;
+    border: 1px solid #727272;
+    width: fit-content;
+  }
+  .mobile-categories ul li {
+    font-weight: 500;
+    font-size: 12px;
+    padding: 16px 8px;
+    line-height: 24px;
+  }
+  .mobile-categories ul .dropdown {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    position: relative;
+    cursor: pointer;
+    z-index: 99;
+  }
+  .mobile-categories ul .dropdown i {
+    font-size: 8px;
+    color: #959ead;
+  }
+  .mobile-categories ul .dropdown .sub-dropdown {
+    position: absolute;
+    top: 15px;
+    transition: 0.2s ease;
+    height: fit-content;
+    left: 145px;
+    width: 100px;
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+    border-radius: 8px;
+    z-index: -99;
+    flex-direction: column;
+    z-index: 0;
+    font-weight: 400;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    gap: 10px;
+  }
+  .mobile-categories ul .dropdown .sub-dropdown li {
+    font-weight: 400;
+    font-size: 10px;
+    color: #555;
+    padding: 5px 0px;
+    width: 100%;
+    padding-left: 20px;
+  }
+  .mobile-categories ul .dropdown:hover .sub-dropdown {
+    z-index: 999;
+    opacity: 1;
+    visibility: unset;
+  }
+  .categories {
+    display: none;
+  }
+  .section-title {
+    padding: 12px 16px;
+  }
   .header .btns-wrap .sign-up-btn {
     width: 80px;
   }
@@ -597,6 +680,9 @@ a:hover {
   .banner-heading {
     font-size: 16px;
     margin-left: 38px;
+  }
+  .categories ul li {
+    font-size: 15px;
   }
   .header .container {
     flex-direction: column;
@@ -651,6 +737,9 @@ a:hover {
     overflow: scroll;
     gap: 3px;
   }
+  .top-product .top-product-list::-webkit-scrollbar {
+    display: none;
+  }
   .top-product .top-product-list p {
     font-size: 9px;
   }
@@ -698,6 +787,9 @@ a:hover {
 }
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023.98px) {
+  .section-title {
+    padding: 16px 20px;
+  }
   .section-title h1 {
     font-size: 18px;
   }
@@ -711,9 +803,19 @@ a:hover {
     flex-direction: column;
     gap: 20px;
   }
+  .header .logo {
+    width: 50px;
+  }
   .header .search-bar {
-    margin-left: 20px;
-    margin-right: 30px;
+    gap: 8px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .header .btns-wrap .sign-in-btn, .header .btns-wrap .sign-up-btn {
+    font-size: 16px;
+  }
+  .header .btns-wrap .sign-up-btn {
+    width: 77px;
   }
   .content .list {
     gap: 25px;
