--- a/app.css
+++ b/app.css
@@ -565,8 +565,16 @@ a:hover {
   display: none;
 }
 
+.mobile-cate-btn {
+  display: none;
+}
+
 /* mobile */
 @media screen and (max-width: 767.98px) {
+  .mobile-cate-btn {
+    display: block;
+    margin-top: 20px;
+  }
   .mobile-categories {
     display: block;
     position: relative;
