--- a/app.css
+++ b/app.css
@@ -755,6 +755,9 @@ a:hover {
     flex: none;
     width: 30%;
   }
+  .footer .footer-text {
+    font-size: 12px;
+  }
   .footer .container {
     display: flex;
     flex-direction: column;
@@ -883,6 +886,9 @@ a:hover {
 .footer .container .right {
     max-width: 100%;
     width: 100%;
+  }
+  .footer .footer-text {
+    font-size: 12px;
   }
 }
 /* mobile & tablet */
